--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -163,4 +162,21 @@ code {
 .no-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+.form-bg {
+  border-radius: 20px;
+  border: 1px solid rgba(51, 66, 255, 0);
+  background: rgba(31, 44, 100, 0.7);
+  box-shadow: 0px 40px 80px 0px rgba(34, 33, 33, 0.5),
+    0px 100px 100px 0px rgba(19, 19, 19, 0.25);
+}
+.form-input {
+  border-radius: 2px;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  background: linear-gradient(    180deg,    rgba(255, 255, 255, 0) -3.62%,    rgba(255, 255, 255, 0.2) 100%  );
+  backdrop-filter: blur(15px);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
 }
